--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,8 @@
     },
     "require": {
         "php": "^7.0",
-        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0"
+        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|~5.8.0",
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.10",
